<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/userNameLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:ems="10"
        android:hint="@string/userNameHint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/passwordLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordHint" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/addUserButtonString"
        android:onClick="onClickAddUser1" />

</LinearLayout>
